# Python-CrewAI

./: README.md
my_project/: README.md  pyproject.toml  report.md  report_draft.md  report_edited.md  report_final.md
my_project/assistant_agents/: README.md  pyproject.toml
my_project/assistant_agents/src/assistant_agents/: crew.py  main.py
my_project/assistant_agents/src/assistant_agents/config/: agents.yaml  tasks.yaml
my_project/src/my_project/: crew.py  main.py
my_projects/: README.md  pyproject.toml
my_projects/src/my_projects/: crew.py  main.py
