[project]
name = "my_projects"
version = "0.1.0"
description = "my_projects using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
my_projects = "my_projects.main:run"
run_crew = "my_projects.main:run"
train = "my_projects.main:train"
replay = "my_projects.main:replay"
test = "my_projects.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
